<resources>
    <string name="app_name">东软食神</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_recipe">RecipeActivity</string>


    <string name="abouttitle">关于本软件</string>
	<string name="text1">基于Android版的东软移动食堂,内置食堂所有菜谱,附有食物分类,东软特色菜推荐,菜品收藏,电话订餐等功能。
	</string>

    <string name="title3">用户反馈</string>
	<string name="text3">如果您在使用软件的过程中，有任何意见或者建议，欢迎发送邮件到以下邮箱地址，你宝贵的意见对我们持续改进软件质量有很大的帮助。联系我们：lishidezy@163.com
	</string>
    <string name="copyright">Copyright ©2015 DRSS.All Rights Reserved</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_food_details">FoodDetailsActivity</string>
</resources>
